# programming

./: .gitignore
Haskell/: Haskell.cabal  \  flake.nix
Haskell/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
Haskell/projects/HWikibook/: test.hs
Haskell/projects/cs_to_hs/: README.org  a.org
Haskell/projects/gui_hs/: Main.hs  default.nix  flake.nix
Haskell/projects/miso/: flake.nix
Haskell/projects/miso_webui/: flake.nix
cpp/: .#gcc  .#gcc-1-link  .flake.nix.swp  README.md  Tsum  a.out  factorial  flake.nix  gtkmm4  nixpkgs#gtkmm4  nixpkgs#gtkmm4-1-link  nixpkgs#pkgconfig  nixpkgs#pkgconfig-1-link  nixpkgs#pkgconfig-2-link  pkgconfig  test1  test2
cpp/projects/cmakeex/: flake.nix
cpp/projects/cmakeex/ex5/: CMakeLists.txt  README.md  flake.nix
cpp/projects/glade/: Unsaved 1.glade  Unsaved 2.glade
cpp/projects/gnuplot/: Makefile  README.org  flake.nix  main  main.cpp  main2  main2.cpp
cpp/projects/gtk_cmake/: README.md  flake.nix
cpp/projects/gtk_cmake/2_cmg1/: CMakeLists.txt
cpp/projects/gtkmm3/: flake.nix
cpp/projects/gtkmm_plplot/: flake.nix  gtkmm-plplot.nix  plplot5_14.nix
cpp/projects/plplot/: flake.nix  plplot5_11.nix  plplot5_14.nix
cpp/projects/results/: Tsum  cpp_test  cpp_test2  factorial  simple
gnuplot/: plot_xy.sh  sample.sh  simple_xydata.txt  xy_org.org  xy_org2.org
gnuplot/exm/: exm1.txt  exm2.txt  exm3.txt  exm3_data.txt
python3_9/: flake.nix  sub_1.csv  sub_2.csv  sub_3.csv
python3_9/projects/: test.py  test2.py
rust/: flake.nix
(+484 files in other folders)
